--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/lyonx/liri-node-app#readme",
   "dependencies": {
+    "moment": "^2.20.1",
     "node-spotify-api": "^1.0.7",
     "request": "^2.83.0",
     "spotify": "^0.3.0",
